added ts config and pool to connection.ts

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 package-lock.json
-package.json
+.env
 # User-specific files
 *.rsuser
 *.suo
