--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,23 +1,19 @@
 {
     "compilerOptions": {
-      "target": "es6",
-      "lib": [
-        "dom",
-        "dom.iterable",
-        "esnext"
-      ],
-      "allowJs": true,
-      "skipLibCheck": true,
-      "esModuleInterop": true,
-      "allowSyntheticDefaultImports": true,
-      "strict": true,
-      "forceConsistentCasingInFileNames": true,
+      "target": "es5",                       
+      "lib": ["esnext"],                     
+      "module": "commonjs",    
+      "esModuleInterop": true,               
+      "allowSyntheticDefaultImports": true,  
+      "strict": true,                        
+      "moduleResolution": "node",            
+      "resolveJsonModule": true,             
+      "isolatedModules": true,               
+      "skipLibCheck": true,                  
+      "forceConsistentCasingInFileNames": true, 
       "noFallthroughCasesInSwitch": true,
-      "module": "esnext",
-      "moduleResolution": "node",
-      "resolveJsonModule": true,
-      "isolatedModules": true,
-      "noEmit": true,
+      "noEmit": true 
     },
+    "include": ["./**/*"],
+    "exclude": ["node_modules"]
   }
-  
