--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,13 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+      "gulp": "^5.0.0",
+      "gulp-sass": "^5.1.0",
+      "sass": "^1.77.1"
+  },
   "scripts": {
+    "gulp": "cd ./src/utils && gulp",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
