installed apollo package to client, added error page and fixed/added code to App and index tsx

--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
         "start:dev": "concurrently \"npm run build && cd server && node server.ts\"\"\"",
         "start": "npm run build && cd server && node server.ts",
         "server": "cd server && npm run server",
+        "client": "cd client && npm run start",
         "install": "npm run install:server && npm run install:client",
         "install:server": "cd server && npm install",
         "install:client": "cd client && npm install",
-        "client": "cd client && npm start",
+        
         "seed": "cd server && npm run seed"
     },
     "dependencies": {
