--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
+    "graphql": "^16.8.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
@@ -20,7 +22,8 @@
     "@types/node": "^20.12.12",
     "gulp": "^5.0.0",
     "gulp-sass": "^5.1.0",
-    "sass": "^1.77.1"
+    "sass": "^1.77.1",
+    "vite": "^5.2.11"
   },
   "scripts": {
     "gulp": "cd ./src/utils && gulp",
