--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 package-lock.json
 .env
+dist
 # User-specific files
 *.rsuser
 *.suo
