--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
+    "@vitejs/plugin-react": "^4.3.0",
     "gulp": "^5.0.0",
     "gulp-sass": "^5.1.0",
     "sass": "^1.77.1",
