--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "typescript": "^4.9.5",
+    "universal-cookie": "^7.1.4",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
