--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.23.1",
     "typescript": "^4.9.5",
     "universal-cookie": "^7.1.4",
