--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@apollo/server": "^4.7.1",
         "bcrypt": "^5.1.1",
+        "cloudinary": "^2.2.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
