--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
@@ -22,6 +23,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.6",
     "@types/node": "^20.12.12",
     "@vitejs/plugin-react": "^4.3.0",
     "gulp": "^5.0.0",
