--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
         "start": "concurrently \"cd server && npm run start\" \"cd client && npm run start\"",
         "server": "cd server && npm run server",
         "client": "cd client && npm run start",
-        "install": "npm run install:server && npm run install:client",
-        "install:server": "cd server && npm install",
-        "install:client": "cd client && npm install",
+        "install:all": "npm run install && npm run install:server && npm run install:client",
+        "install:server": "cd server && npm run install",
+        "install:client": "cd client && npm run install",
         "seed": "cd server && npm run seed"
     },
     "dependencies": {
