final package commit probably

--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
         "start": "concurrently \"cd server && npm run start\" \"cd client && npm run start\"",
         "server": "cd server && npm run server",
         "client": "cd client && npm run start",
-        "install:all": "npm run install:server && npm run install:client",
-        "install:server": "cd server && npm run install",
-        "install:client": "cd ../client && npm run install",
+        "install": "concurrently \"cd server && npm run install\" \"cd client && npm run install\"",
+        "root": "npm install",
         "seed": "cd server && npm run seed"
     },
     "dependencies": {
