--- a/client/package.json
+++ b/client/package.json
@@ -36,7 +36,8 @@
     "start": "vite",
     "build": "vite build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "install": "npm i"
   },
   "eslintConfig": {
     "extends": [
