--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "main": "server.ts",
     "scripts": {
-        "start": "node server.ts",
+        "start": "ts-node server.ts",
         "start:dev": "nodemon server.ts --ignore client",
         "watch": "nodemon",
         "seed": "ts-node ./sql/seed.ts",
