enhanced error handling and fixed naviagte to user profile link on post bug and img not loading bug

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "Game-Contributor",
-    "description": "description",
+    "name": "game-contributor",
+    "description": "blog site emant for code contribution",
     "authors": "Charles Tiffany",
     "version": "1.0.0",
     "main": "/",
